Fix the navigation visibility issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,8 @@
 }
 body {
   font-family: "br-firma-regular", sans-serif;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   /* background-color: var(--smoky-black); */
 }
 
